k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musicvoting-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # TODO: replace with your LeoCloud hostname (e.g. it250248.cloud.htl-leonding.ac.at)
    - host: TODO_REPLACE_LEOCLOUD_HOST
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
